
examplesdir = $(pkgdatadir)/examples

# Install and distribute these examples.
dist_examples_DATA = 				\
    example1					\
    example2					\
    example3					\
    24_cell 24_cell.cost			\
    cuww1 cuww1.cost				\
    magic4x4					\
    magic5x5					\
    tests/missing-newline.latte			\
    tests/missing-newline-2.latte		\
    tests/missing-newline-3.latte		\
    tests/implied-equation.latte		\
    hickerson/hickerson-7			\
    hickerson/hickerson-8			\
    hickerson/hickerson-9			\
    hickerson/hickerson-10			\
    hickerson/hickerson-11			\
    hickerson/hickerson-12			\
    hickerson/hickerson-13			\
    hickerson/hickerson-14			\
    hickerson/hickerson-15			\
    hickerson/hickerson-16			\
    hickerson/hickerson-17			\
    hickerson/hickerson-18			\
    hickerson/hickerson-19			\
    hickerson/hickerson-20			\
    hickerson/hickerson-24			\
    hickerson/hickerson-28			\
    hickerson/hickerson-32			\
    hickerson/hickerson-36			\
    mcallister/HivePolytopeImpossible		\
    mcallister/HivePolytopeMinutes1		\
    mcallister/HivePolytopeMinutes2		\
    mcallister/HivePolytopeMinutes3		\
    mcallister/HivePolytopeMinutes4		\
    mcallister/HivePolytopeMinutes5		\
    mcallister/HivePolytopeSeconds		\
    yoshida/24_cell_latte			\
    yoshida/3x3x3_semi_10.equ			\
    yoshida/3x3x3_semi_11.equ			\
    yoshida/3x3x3_semi_12.equ			\
    yoshida/3x3x3_semi_13.equ			\
    yoshida/3x3x3_semi_14.equ			\
    yoshida/3x3x3_semi_15.equ			\
    yoshida/3x3x3_semi_16.equ			\
    yoshida/3x3x3_semi_17.equ			\
    yoshida/3x3x3_semi_18.equ			\
    yoshida/3x3x3_semi_1.equ			\
    yoshida/3x3x3_semi_2.equ			\
    yoshida/3x3x3_semi_3.equ			\
    yoshida/3x3x3_semi_4.equ			\
    yoshida/3x3x3_semi_5.equ			\
    yoshida/3x3x3_semi_6.equ			\
    yoshida/3x3x3_semi_7.equ			\
    yoshida/3x3x3_semi_8.equ			\
    yoshida/3x3x3_semi_9.equ			\
    yoshida/4flow_1.equ				\
    yoshida/4flow_2.equ				\
    yoshida/4flow_3.equ				\
    yoshida/4x4Table1				\
    yoshida/4x4Table10				\
    yoshida/4x4Table11				\
    yoshida/4x4Table2				\
    yoshida/4x4Table3				\
    yoshida/4x4Table4				\
    yoshida/4x4Table5				\
    yoshida/4x4Table6				\
    yoshida/4x4Table7				\
    yoshida/4x4Table8				\
    yoshida/4x4Table9				\
    yoshida/4x5_1				\
    yoshida/4x5_2				\
    yoshida/4x5_3				\
    yoshida/5flow_1.equ				\
    yoshida/5flow_2.equ				\
    yoshida/5flow_3.equ				\
    yoshida/aardallenstra.equ			\
    yoshida/cube				\
    yoshida/cube2				\
    yoshida/digraph4_10.equ			\
    yoshida/digraph4_1.equ			\
    yoshida/digraph4_2.equ			\
    yoshida/digraph4_3.equ			\
    yoshida/digraph4_4.equ			\
    yoshida/digraph4_5.equ			\
    yoshida/digraph4_6.equ			\
    yoshida/digraph4_7.equ			\
    yoshida/digraph4_8.equ			\
    yoshida/digraph4_9.equ			\
    yoshida/digraph5_10.equ			\
    yoshida/digraph5_1.equ			\
    yoshida/digraph5_2.equ			\
    yoshida/digraph5_3.equ			\
    yoshida/digraph5_4.equ			\
    yoshida/digraph5_5.equ			\
    yoshida/digraph5_6.equ			\
    yoshida/digraph5_7.equ			\
    yoshida/digraph5_8.equ			\
    yoshida/digraph5_9.equ			\
    yoshida/hyp_simp_4_1.equ			\
    yoshida/hyp_simp_4_2.equ			\
    yoshida/hyp_simp_4_3.equ			\
    yoshida/hyp_simp_5_1.equ			\
    yoshida/hyp_simp_5_2.equ			\
    yoshida/hyp_simp_5_3.equ			\
    yoshida/hyp_simp_5_4.equ			\
    yoshida/hyp_simp_6_1.equ			\
    yoshida/hyp_simp_6_2.equ			\
    yoshida/hyp_simp_6_3.equ			\
    yoshida/hyp_simp_6_4.equ			\
    yoshida/hyp_simp_6_5.equ			\
    yoshida/hyp_simp_7_1.equ			\
    yoshida/hyp_simp_7_2.equ			\
    yoshida/hyp_simp_7_3.equ			\
    yoshida/hyp_simp_7_4.equ			\
    yoshida/hyp_simp_7_5.equ			\
    yoshida/hyp_simp_7_6.equ			\
    yoshida/knapsack1.equ			\
    yoshida/knapsack2.equ			\
    yoshida/knapsackbaby1.equ			\
    yoshida/knapsackbaby2.equ			\
    yoshida/mountExample1			\
    yoshida/mountExample2			\
    yoshida/mountExample3			\
    yoshida/mountExample4			\
    yoshida/mountExample5			\
    yoshida/test4x4_1				\
    yoshida/test4x4_2				\
    yoshida/test4x4_3				\
    yoshida/tru_cube_latte			\
    yoshida/tru_simplex_latte			\
    yoshida/3x3x4_1.equ				\
    yoshida/cuww1_1.equ				\
    yoshida/cuww2_1.equ				\
    yoshida/cuww3_1.equ				\
    yoshida/cuww4_1.equ				\
    yoshida/cuww5_1.equ				\
    yoshida/dean1				\
    yoshida/dean2				\
    yoshida/dean3				\
    yoshida/prob10_1.equ			\
    yoshida/prob1_1.equ				\
    yoshida/prob2_1.equ				\
    yoshida/prob3_1.equ				\
    yoshida/prob4_1.equ				\
    yoshida/prob5_1.equ				\
    yoshida/prob6_1.equ				\
    yoshida/prob7_1.equ				\
    crosspolytope/cross-polytope-2.vrep		\
    crosspolytope/cross-polytope-3.vrep		\
    crosspolytope/cross-polytope-4.vrep		\
    crosspolytope/cross-polytope-5.vrep		\
    crosspolytope/cross-polytope-6.vrep		\
    crosspolytope/cross-polytope-7.vrep		\
    crosspolytope/cross-polytope-8.vrep		\
    crosspolytope/cross-polytope-9.vrep		\
    crosspolytope/cross-polytope-10.vrep	\
    crosspolytope/cross-polytope-11.vrep	\
    crosspolytope/cross-polytope-12.vrep	\
    crosspolytope/cross-polytope-13.vrep	\
    crosspolytope/cross-polytope-14.vrep	\
    crosspolytope/cross-polytope-15.vrep	\
    crosspolytope/cross-polytope-16.vrep	\
    crosspolytope/cross-polytope-17.vrep	\
    crosspolytope/cross-polytope-18.vrep	\
    crosspolytope/cross-polytope-19.vrep	\
    crosspolytope/cross-polytope-20.vrep	\
    crosspolytope/cross-polytope-21.vrep	\
    crosspolytope/cross-polytope-22.vrep	\
    crosspolytope/cross-polytope-23.vrep	\
    crosspolytope/cross-polytope-24.vrep	\
    crosspolytope/cross-polytope-25.vrep	\
    crosspolytope/cross-polytope-26.vrep	\
    crosspolytope/cross-polytope-27.vrep	\
    crosspolytope/cross-polytope-28.vrep	\
    crosspolytope/cross-polytope-29.vrep	\
    crosspolytope/cross-polytope-30.vrep



















