
examplesdir = $(pkgdatadir)/examples

# Install and distribute these examples.
# Without "nobase" the directories would be flattened 
# (that's how we installed it prior to version 1.7.2). 
nobase_dist_examples_DATA =						\
    24_cell 24_cell.cost						\
    README								\
    birkhoff/birkhoff-10.latte						\
    birkhoff/birkhoff-11.latte						\
    birkhoff/birkhoff-12.latte						\
    birkhoff/birkhoff-4.latte						\
    birkhoff/birkhoff-6.latte						\
    birkhoff/birkhoff-8.latte						\
    birkhoff/birkhoff-9.latte						\
    ccp/ccp_5.ext							\
    ccp/ccp_5.ine							\
    ccp/ccp_6.ext							\
    ccp/ccp_6.ine							\
    ccp/ccp_7.ext							\
    ccp/ccp_7.ine							\
    ccp/readme								\
    crossCyclic/cc_8_10.ext						\
    crossCyclic/cc_8_10.ine						\
    crossCyclic/cc_8_11.ext						\
    crossCyclic/cc_8_11.ine						\
    crossCyclic/cc_8_5.ext						\
    crossCyclic/cc_8_5.ine						\
    crossCyclic/cc_8_6.ext						\
    crossCyclic/cc_8_6.ine						\
    crossCyclic/cc_8_7.ext						\
    crossCyclic/cc_8_7.ine						\
    crossCyclic/cc_8_8.ext						\
    crossCyclic/cc_8_8.ine						\
    crossCyclic/cc_8_9.ext						\
    crossCyclic/cc_8_9.ine						\
    crossCyclic/readme							\
    crosspolytope/cross-polytope-10.vrep				\
    crosspolytope/cross-polytope-11.vrep				\
    crosspolytope/cross-polytope-12.vrep				\
    crosspolytope/cross-polytope-13.vrep				\
    crosspolytope/cross-polytope-14.vrep				\
    crosspolytope/cross-polytope-15.vrep				\
    crosspolytope/cross-polytope-16.vrep				\
    crosspolytope/cross-polytope-17.vrep				\
    crosspolytope/cross-polytope-18.vrep				\
    crosspolytope/cross-polytope-19.vrep				\
    crosspolytope/cross-polytope-2.vrep					\
    crosspolytope/cross-polytope-20.vrep				\
    crosspolytope/cross-polytope-21.vrep				\
    crosspolytope/cross-polytope-22.vrep				\
    crosspolytope/cross-polytope-23.vrep				\
    crosspolytope/cross-polytope-24.vrep				\
    crosspolytope/cross-polytope-25.vrep				\
    crosspolytope/cross-polytope-26.vrep				\
    crosspolytope/cross-polytope-27.vrep				\
    crosspolytope/cross-polytope-28.vrep				\
    crosspolytope/cross-polytope-29.vrep				\
    crosspolytope/cross-polytope-3.vrep					\
    crosspolytope/cross-polytope-30.vrep				\
    crosspolytope/cross-polytope-4.vrep					\
    crosspolytope/cross-polytope-5.vrep					\
    crosspolytope/cross-polytope-6.vrep					\
    crosspolytope/cross-polytope-7.vrep					\
    crosspolytope/cross-polytope-8.vrep					\
    crosspolytope/cross-polytope-9.vrep					\
    cubes/cube-4-3.5.latte						\
    cubes/cube_10.ext							\
    cubes/cube_10.ine							\
    cubes/cube_11.ext							\
    cubes/cube_11.ine							\
    cubes/cube_12.ext							\
    cubes/cube_12.ine							\
    cubes/cube_13.ext							\
    cubes/cube_13.ine							\
    cubes/cube_14.ext							\
    cubes/cube_14.ine							\
    cubes/cube_2.ext							\
    cubes/cube_2.ine							\
    cubes/cube_3.ext							\
    cubes/cube_3.ine							\
    cubes/cube_4.ext							\
    cubes/cube_4.ine							\
    cubes/cube_5.ext							\
    cubes/cube_5.ine							\
    cubes/cube_6.ext							\
    cubes/cube_6.ine							\
    cubes/cube_7.ext							\
    cubes/cube_7.ine							\
    cubes/cube_8.ext							\
    cubes/cube_8.ine							\
    cubes/cube_9.ext							\
    cubes/cube_9.ine							\
    cuww1 cuww1.cost							\
    deloera/6e.latte							\
    deloera/7h.latte							\
    deloera/C11.latte							\
    deloera/C12.latte							\
    deloera/another-birkhoff-simplex.vrep				\
    deloera/chan-robbins-yuen-pyramid.vrep				\
    deloera/some-birkhoff-simplex.vrep					\
    example1								\
    example2								\
    example3								\
    garcia								\
    haus/e1-after-intersection.ine					\
    haus/e2-after-intersection.ine					\
    haus/e3-after-intersection.ine					\
    haus/e4-after-intersection.ine					\
    haus/e4.ine								\
    haus/e5-after-intersection.ine					\
    hickerson/hickerson-10						\
    hickerson/hickerson-11						\
    hickerson/hickerson-12						\
    hickerson/hickerson-13						\
    hickerson/hickerson-14						\
    hickerson/hickerson-15						\
    hickerson/hickerson-16						\
    hickerson/hickerson-17						\
    hickerson/hickerson-18						\
    hickerson/hickerson-19						\
    hickerson/hickerson-20						\
    hickerson/hickerson-24						\
    hickerson/hickerson-28						\
    hickerson/hickerson-32						\
    hickerson/hickerson-36						\
    hickerson/hickerson-7						\
    hickerson/hickerson-8						\
    hickerson/hickerson-9						\
    kahle/K4.latte							\
    kahle/join.latte							\
    kahle/other.latte							\
    lehmann								\
    magic4x4								\
    magic5x5								\
    magic6x6								\
    matroid/Billera1.lat						\
    matroid/Billera2.lat						\
    matroid/README							\
    matroid/Speyer1.lat							\
    matroid/Speyer2.lat							\
    matroid/haws.oxleybasis.txt						\
    matroid/haws.oxleybasis.txt.l1.lat					\
    matroid/haws.oxleybasis.txt.l10.lat					\
    matroid/haws.oxleybasis.txt.l11.lat					\
    matroid/haws.oxleybasis.txt.l12.lat					\
    matroid/haws.oxleybasis.txt.l13.lat					\
    matroid/haws.oxleybasis.txt.l14.lat					\
    matroid/haws.oxleybasis.txt.l15.lat					\
    matroid/haws.oxleybasis.txt.l16.lat					\
    matroid/haws.oxleybasis.txt.l17.lat					\
    matroid/haws.oxleybasis.txt.l18.lat					\
    matroid/haws.oxleybasis.txt.l19.lat					\
    matroid/haws.oxleybasis.txt.l2.lat					\
    matroid/haws.oxleybasis.txt.l20.ext.lat				\
    matroid/haws.oxleybasis.txt.l20.lat					\
    matroid/haws.oxleybasis.txt.l21.lat					\
    matroid/haws.oxleybasis.txt.l22.lat					\
    matroid/haws.oxleybasis.txt.l23.lat					\
    matroid/haws.oxleybasis.txt.l24.lat					\
    matroid/haws.oxleybasis.txt.l25.lat					\
    matroid/haws.oxleybasis.txt.l26.lat					\
    matroid/haws.oxleybasis.txt.l27.lat					\
    matroid/haws.oxleybasis.txt.l28.lat					\
    matroid/haws.oxleybasis.txt.l29.lat					\
    matroid/haws.oxleybasis.txt.l3.lat					\
    matroid/haws.oxleybasis.txt.l30.lat					\
    matroid/haws.oxleybasis.txt.l31.lat					\
    matroid/haws.oxleybasis.txt.l32.lat					\
    matroid/haws.oxleybasis.txt.l33.lat					\
    matroid/haws.oxleybasis.txt.l34.lat					\
    matroid/haws.oxleybasis.txt.l35.lat					\
    matroid/haws.oxleybasis.txt.l36.lat					\
    matroid/haws.oxleybasis.txt.l4.lat					\
    matroid/haws.oxleybasis.txt.l5.lat					\
    matroid/haws.oxleybasis.txt.l6.lat					\
    matroid/haws.oxleybasis.txt.l7.lat					\
    matroid/haws.oxleybasis.txt.l8.lat					\
    matroid/haws.oxleybasis.txt.l9.lat					\
    mcallister/HivePolytopeImpossible					\
    mcallister/HivePolytopeMinutes1					\
    mcallister/HivePolytopeMinutes2					\
    mcallister/HivePolytopeMinutes3					\
    mcallister/HivePolytopeMinutes4					\
    mcallister/HivePolytopeMinutes5					\
    mcallister/HivePolytopeSeconds					\
    metric/Fm_4.ext							\
    metric/Fm_4.ine							\
    metric/Fm_5.ext							\
    metric/Fm_5.ine							\
    metric/Fm_6.ext							\
    metric/Fm_6.ine							\
    random-simplex/random-simplex-dim3-digits2-1.vrep			\
    random-simplex/random-simplex-dim3-digits2-10.vrep			\
    random-simplex/random-simplex-dim3-digits2-2.vrep			\
    random-simplex/random-simplex-dim3-digits2-3.vrep			\
    random-simplex/random-simplex-dim3-digits2-4.vrep			\
    random-simplex/random-simplex-dim3-digits2-5.vrep			\
    random-simplex/random-simplex-dim3-digits2-6.vrep			\
    random-simplex/random-simplex-dim3-digits2-7.vrep			\
    random-simplex/random-simplex-dim3-digits2-8.vrep			\
    random-simplex/random-simplex-dim3-digits2-9.vrep			\
    random-simplex/random-simplex-dim3-digits4-1.vrep			\
    random-simplex/random-simplex-dim3-digits4-10.vrep			\
    random-simplex/random-simplex-dim3-digits4-2.vrep			\
    random-simplex/random-simplex-dim3-digits4-3.vrep			\
    random-simplex/random-simplex-dim3-digits4-4.vrep			\
    random-simplex/random-simplex-dim3-digits4-5.vrep			\
    random-simplex/random-simplex-dim3-digits4-6.vrep			\
    random-simplex/random-simplex-dim3-digits4-7.vrep			\
    random-simplex/random-simplex-dim3-digits4-8.vrep			\
    random-simplex/random-simplex-dim3-digits4-9.vrep			\
    random-simplex/random-simplex-dim3-digits5-1.vrep			\
    random-simplex/random-simplex-dim3-digits5-10.vrep			\
    random-simplex/random-simplex-dim3-digits5-2.vrep			\
    random-simplex/random-simplex-dim3-digits5-3.vrep			\
    random-simplex/random-simplex-dim3-digits5-4.vrep			\
    random-simplex/random-simplex-dim3-digits5-5.vrep			\
    random-simplex/random-simplex-dim3-digits5-6.vrep			\
    random-simplex/random-simplex-dim3-digits5-7.vrep			\
    random-simplex/random-simplex-dim3-digits5-8.vrep			\
    random-simplex/random-simplex-dim3-digits5-9.vrep			\
    random-simplex/random-simplex-dim4-digits2-1.vrep			\
    random-simplex/random-simplex-dim4-digits2-10.vrep			\
    random-simplex/random-simplex-dim4-digits2-2.vrep			\
    random-simplex/random-simplex-dim4-digits2-3.vrep			\
    random-simplex/random-simplex-dim4-digits2-4.vrep			\
    random-simplex/random-simplex-dim4-digits2-5.vrep			\
    random-simplex/random-simplex-dim4-digits2-6.vrep			\
    random-simplex/random-simplex-dim4-digits2-7.vrep			\
    random-simplex/random-simplex-dim4-digits2-8.vrep			\
    random-simplex/random-simplex-dim4-digits2-9.vrep			\
    random-simplex/random-simplex-dim6-digits4-1.vrep			\
    random-simplex/random-simplex-dim6-digits4-10.vrep			\
    random-simplex/random-simplex-dim6-digits4-2.vrep			\
    random-simplex/random-simplex-dim6-digits4-3.vrep			\
    random-simplex/random-simplex-dim6-digits4-4.vrep			\
    random-simplex/random-simplex-dim6-digits4-5.vrep			\
    random-simplex/random-simplex-dim6-digits4-6.vrep			\
    random-simplex/random-simplex-dim6-digits4-7.vrep			\
    random-simplex/random-simplex-dim6-digits4-8.vrep			\
    random-simplex/random-simplex-dim6-digits4-9.vrep			\
    random-simplex/random-simplex-dim8-digits4-1.vrep			\
    random-simplex/random-simplex-dim8-digits4-10.vrep			\
    random-simplex/random-simplex-dim8-digits4-2.vrep			\
    random-simplex/random-simplex-dim8-digits4-3.vrep			\
    random-simplex/random-simplex-dim8-digits4-4.vrep			\
    random-simplex/random-simplex-dim8-digits4-5.vrep			\
    random-simplex/random-simplex-dim8-digits4-6.vrep			\
    random-simplex/random-simplex-dim8-digits4-7.vrep			\
    random-simplex/random-simplex-dim8-digits4-8.vrep			\
    random-simplex/random-simplex-dim8-digits4-9.vrep			\
    rh/rh_10_20.ext							\
    rh/rh_10_20.ine							\
    rh/rh_10_25.ext							\
    rh/rh_10_25.ine							\
    rh/rh_10_30.ext							\
    rh/rh_10_30.ine							\
    rh/rh_8_20.ext							\
    rh/rh_8_20.ine							\
    rh/rh_8_25.ext							\
    rh/rh_8_25.ine							\
    rh/rh_8_30.ext							\
    rh/rh_8_30.ine							\
    rv/rv_10_12.ext							\
    rv/rv_10_12.ine							\
    rv/rv_10_13.ext							\
    rv/rv_10_13.ine							\
    rv/rv_10_14.ext							\
    rv/rv_10_14.ine							\
    rv/rv_8_10.ext							\
    rv/rv_8_10.ine							\
    rv/rv_8_11.ext							\
    rv/rv_8_11.ine							\
    rv/rv_8_12.ext							\
    rv/rv_8_12.ine							\
    rv/rv_8_13.ext							\
    rv/rv_8_13.ine							\
    rv/rv_8_14.ext							\
    rv/rv_8_14.ine							\
    rv/rv_8_20.ext							\
    rv/rv_8_20.ine							\
    rv/rv_8_30.ext							\
    rv/rv_8_30.ine							\
    tests/char-spec-4-permclass-LPred-IP-4-RRRRRRRRRRR.lat.remIQ_36.lat	\
    tests/implied-equation.latte					\
    tests/missing-newline-2.latte					\
    tests/missing-newline-3.latte					\
    tests/missing-newline.latte						\
    tests/preproc-integrally-empty.latte				\
    van-herick/k-flow-3							\
    van-herick/k-flow-4							\
    van-herick/k-flow-5							\
    van-herick/k-flow-6							\
    yoshida/24_cell_latte						\
    yoshida/3x3x3_semi_1.equ						\
    yoshida/3x3x3_semi_10.equ						\
    yoshida/3x3x3_semi_11.equ						\
    yoshida/3x3x3_semi_12.equ						\
    yoshida/3x3x3_semi_13.equ						\
    yoshida/3x3x3_semi_14.equ						\
    yoshida/3x3x3_semi_15.equ						\
    yoshida/3x3x3_semi_16.equ						\
    yoshida/3x3x3_semi_17.equ						\
    yoshida/3x3x3_semi_18.equ						\
    yoshida/3x3x3_semi_2.equ						\
    yoshida/3x3x3_semi_3.equ						\
    yoshida/3x3x3_semi_4.equ						\
    yoshida/3x3x3_semi_5.equ						\
    yoshida/3x3x3_semi_6.equ						\
    yoshida/3x3x3_semi_7.equ						\
    yoshida/3x3x3_semi_8.equ						\
    yoshida/3x3x3_semi_9.equ						\
    yoshida/3x3x4_1.equ							\
    yoshida/4flow_1.equ							\
    yoshida/4flow_2.equ							\
    yoshida/4flow_3.equ							\
    yoshida/4x4Table1							\
    yoshida/4x4Table10							\
    yoshida/4x4Table11							\
    yoshida/4x4Table2							\
    yoshida/4x4Table3							\
    yoshida/4x4Table4							\
    yoshida/4x4Table5							\
    yoshida/4x4Table6							\
    yoshida/4x4Table7							\
    yoshida/4x4Table8							\
    yoshida/4x4Table9							\
    yoshida/4x5_1							\
    yoshida/4x5_2							\
    yoshida/4x5_3							\
    yoshida/5flow_1.equ							\
    yoshida/5flow_2.equ							\
    yoshida/5flow_3.equ							\
    yoshida/HD								\
    yoshida/HD1								\
    yoshida/HD10							\
    yoshida/HD11							\
    yoshida/HD12							\
    yoshida/HD13							\
    yoshida/HD14							\
    yoshida/HD15							\
    yoshida/HD16							\
    yoshida/HD17							\
    yoshida/HD18							\
    yoshida/HD2								\
    yoshida/HD3								\
    yoshida/HD4								\
    yoshida/HD5								\
    yoshida/HD6								\
    yoshida/HD7								\
    yoshida/HD8								\
    yoshida/HD9								\
    yoshida/README							\
    yoshida/aardallenstra.equ						\
    yoshida/correct							\
    yoshida/cube							\
    yoshida/cube2							\
    yoshida/cuww1_1.equ							\
    yoshida/cuww2_1.equ							\
    yoshida/cuww3_1.equ							\
    yoshida/cuww4_1.equ							\
    yoshida/cuww5_1.equ							\
    yoshida/dean1							\
    yoshida/dean2							\
    yoshida/dean3							\
    yoshida/digraph4_1.equ						\
    yoshida/digraph4_10.equ						\
    yoshida/digraph4_2.equ						\
    yoshida/digraph4_3.equ						\
    yoshida/digraph4_4.equ						\
    yoshida/digraph4_5.equ						\
    yoshida/digraph4_6.equ						\
    yoshida/digraph4_7.equ						\
    yoshida/digraph4_8.equ						\
    yoshida/digraph4_9.equ						\
    yoshida/digraph5_1.equ						\
    yoshida/digraph5_10.equ						\
    yoshida/digraph5_2.equ						\
    yoshida/digraph5_3.equ						\
    yoshida/digraph5_4.equ						\
    yoshida/digraph5_5.equ						\
    yoshida/digraph5_6.equ						\
    yoshida/digraph5_7.equ						\
    yoshida/digraph5_8.equ						\
    yoshida/digraph5_9.equ						\
    yoshida/hyp_simp_4_1.equ						\
    yoshida/hyp_simp_4_2.equ						\
    yoshida/hyp_simp_4_3.equ						\
    yoshida/hyp_simp_5_1.equ						\
    yoshida/hyp_simp_5_2.equ						\
    yoshida/hyp_simp_5_3.equ						\
    yoshida/hyp_simp_5_4.equ						\
    yoshida/hyp_simp_6_1.equ						\
    yoshida/hyp_simp_6_2.equ						\
    yoshida/hyp_simp_6_3.equ						\
    yoshida/hyp_simp_6_4.equ						\
    yoshida/hyp_simp_6_5.equ						\
    yoshida/hyp_simp_7_1.equ						\
    yoshida/hyp_simp_7_2.equ						\
    yoshida/hyp_simp_7_3.equ						\
    yoshida/hyp_simp_7_4.equ						\
    yoshida/hyp_simp_7_5.equ						\
    yoshida/hyp_simp_7_6.equ						\
    yoshida/knapsack1.equ						\
    yoshida/knapsack2.equ						\
    yoshida/knapsackbaby1.equ						\
    yoshida/knapsackbaby2.equ						\
    yoshida/mountExample1						\
    yoshida/mountExample2						\
    yoshida/mountExample3						\
    yoshida/mountExample4						\
    yoshida/mountExample5						\
    yoshida/prob10_1.equ						\
    yoshida/prob1_1.equ							\
    yoshida/prob2_1.equ							\
    yoshida/prob3_1.equ							\
    yoshida/prob4_1.equ							\
    yoshida/prob5_1.equ							\
    yoshida/prob6_1.equ							\
    yoshida/prob7_1.equ							\
    yoshida/test4x4_1							\
    yoshida/test4x4_2							\
    yoshida/test4x4_3							\
    yoshida/tru_cube_latte						\
    yoshida/tru_simplex_latte

