docdir = $(pkgdatadir)/doc

doc_DATA = manual.pdf

EXTRA_DIST = 					\
	amsabbrv.bst				\
	bibliography.bib			\
	examplebrion.eps			\
	examplebrion.jpg			\
	homogenizedTriangle.jpg			\
	latte-integrale.jpg			\
	manual.tex				\
	manual.pdf				\
	relocatable.texi			\
	secrets.tex				\
	truncatedCube.jpg
