EXTRA_DIST=					\
	gmp-check.m4				\
	ntl-check.m4				\
	lidia-check.m4				\
	maple-check.m4				\
	latte-misc.m4				\
	cddlib-check.m4				\
	ax_cc_maxopt.m4				\
	ax_check_compiler_flags.m4		\
	ax_compiler_vendor.m4			\
	ax_cxx_maxopt.m4			\
	ax_gcc_archflag.m4			\
	ax_gcc_x86_cpuid.m4

EXTRA_DIST += gnulib/gnulib-cache.m4

